# SampleSharingAppBazel

./: BUILD.bazel  MODULE.bazel
SampleSharingApp/: BUILD.bazel
SampleSharingApp/Sources/: SampleSharingApp.swift
SampleSharingAppBazel.xcodeproj/: project.pbxproj
SampleSharingAppBazel.xcodeproj/rules_xcodeproj/: generated.xcfilelist
SampleSharingAppBazel.xcodeproj/rules_xcodeproj/bazel/: Debug-swift_debug_settings.py  bazel_build.sh
SampleSharingAppBazel.xcodeproj/xcshareddata/xcschemes/: ShareExt.xcscheme  iOSApp.xcscheme
ShareExtension/: BUILD.bazel  Info.plist
ShareExtension/Resources/: MyJavaScriptFile.js
ShareExtension/Sources/: ShareViewController.swift
