load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "top_level_target",
    "xcodeproj",
)

xcodeproj(
    name = "xcodeproj",
    build_mode = "bazel",
    project_name = "SampleSharingAppBazel",
    tags = ["manual"],
    top_level_targets = [
        top_level_target(
            "//SampleSharingApp:iOSApp",
            target_environments = ["simulator"],
        ),
    ],
)
