load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "lib",
    srcs = glob(["Sources/*.swift"]),
)

ios_application(
    name = "iOSApp",
    bundle_id = "group.seshness.SampleSharingAppBazel",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Info.plist"],
    minimum_os_version = "17.0",
    extensions = [
      "//ShareExtension:ShareExt",
    ],
    visibility = ["//visibility:public"],
    deps = [":lib"],
)
